--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<script src="content.js"></script>
 <script src="random.js"></script>
 <script src="minotaur.js"></script>
 <script src="path.js"></script>
 <script src="game.js"></script>
+
 
 <style>
     body{
