--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <script src="random.js"></script>
 <script src="maze.js"></script>
 <script src="path.js"></script>
-<script src="game.js"></script></head>
+<script src="game.js"></script>
+<script src="audio.js"></script>
+</head>
 
 <style>
     body{
